[server] Fix alignment in list's name column

--- a/server/css/index.css
+++ b/server/css/index.css
@@ -48,6 +48,10 @@ table td {
     text-align: right;
 }
 
+table td.name {
+    text-align: left;
+}
+
 table tbody tr {
     border-bottom: 1px solid #dddddd;
 }
